fixed bugs that posts not scroll to the correct position on mobile

--- a/src/Layout/Layout.scss
+++ b/src/Layout/Layout.scss
@@ -10,7 +10,7 @@
 
   .OutletContainer {
     width: calc(100vw - 70px);
-    height: 100vh;
+    // height: 100vh;
     overflow-y: scroll;
     box-sizing: border-box;
     z-index: 1;
@@ -23,7 +23,7 @@
   .mainLayout {
     .OutletContainer {
       width: 100vw;
-      height: calc(100vh);
+      // height: calc(100vh);
       padding: 47px 0 150px 0;
     }
   }
